<resources>
    <string name="app_name">Honkai Stargazer</string>
    <string name="daynight" translatable="false">DAY</string>
    <string name="arlan">"Arlan"</string>
    <string name="asta">"Asta"</string>
    <string name="bailu">"Bailu"</string>
    <string name="bronya">"Bronya"</string>
    <string name="clara">"Clara"</string>
    <string name="dan_heng">"Dan Heng"</string>
    <string name="gepard">"Gepard"</string>
    <string name="herta">"Herta"</string>
    <string name="himeko">"Himeko"</string>
    <string name="hook">"Hook"</string>
    <string name="jing_yuan">"Jing Yuan"</string>
    <string name="kafka">"Kafka"</string>
    <string name="luocha">"Luocha"</string>
    <string name="march_7th">"March 7th"</string>
    <string name="natasha">"Natasha"</string>
    <string name="pela">"Pela"</string>
    <string name="qingque">"Qingque"</string>
    <string name="sampo">"Sampo"</string>
    <string name="seele">"Seele"</string>
    <string name="serval">"Serval"</string>
    <string name="silver_wolf">"Silver Wolf"</string>
    <string name="sushang">"Sushang"</string>
    <string name="tingyun">"Tingyun"</string>
    <string name="trailblazer">"Trailblazer"</string>
    <string name="welt">"Welt"</string>
    <string name="yanqing">"Yanqing"</string>
    <string name="yukong">"Yukong"</string>
    <string name="band_of_sizzling_thunder">"Band of Sizzling Thunder"</string>
    <string name="belobog_of_the_architects">"Belobog of the Architects"</string>
    <string name="celestial_differentiator">"Celestial Differentiator"</string>
    <string name="champion_of_streetwise_boxing">"Champion of Streetwise Boxing"</string>
    <string name="eagle_of_twilight_line">"Eagle of Twilight Line"</string>
    <string name="firesmith_of_lava_forging">"Firesmith of Lava-Forging"</string>
    <string name="fleet_of_the_ageless">"Fleet of the Ageless"</string>
    <string name="genius_of_brilliant_stars">"Genius of Brilliant Stars"</string>
    <string name="guard_of_wuthering_snow">"Guard of Wuthering Snow"</string>
    <string name="hunter_of_glacial_forest">"Hunter of Glacial Forest"</string>
    <string name="inert_salsotto">"Inert Salsotto"</string>
    <string name="knight_of_purity_palace">"Knight of Purity Palace"</string>
    <string name="musketeer_of_wild_wheat">"Musketeer of Wild Wheat"</string>
    <string name="pan_galactic_commercial_enterprise">"Pan-Galactic Commercial Enterprise"</string>
    <string name="passerby_of_wandering_cloud">"Passerby of Wandering Cloud"</string>
    <string name="space_sealing_station">"Space Sealing Station"</string>
    <string name="sprightly_vonwacq">"Sprightly Vonwacq"</string>
    <string name="talia_kingdom_of_banditry">"Talia: Kingdom of Banditry"</string>
    <string name="thief_of_shooting_meteor">"Thief of Shooting Meteor"</string>
    <string name="wastelander_of_banditry_desert">"Wastelander of Banditry Desert"</string>
    <string name="a_secret_vow">"A Secret Vow"</string>
    <string name="adversarial">"Adversarial"</string>
    <string name="amber">"Amber"</string>
    <string name="arrows">"Arrows"</string>
    <string name="before_dawn">"Before Dawn"</string>
    <string name="before_the_tutorial_mission_starts">"Before the Tutorial Mission Starts"</string>
    <string name="but_the_battle_isnt_over">"But the Battle Isn't Over"</string>
    <string name="carve_the_moon_weave_the_clouds">"Carve the Moon, Weave the Clouds"</string>
    <string name="chorus">"Chorus"</string>
    <string name="collapsing_sky">"Collapsing Sky"</string>
    <string name="cornucopia">"Cornucopia"</string>
    <string name="cruising_in_the_stellar_sea">"Cruising in the Stellar Sea"</string>
    <string name="dance_dance_dance">"Dance! Dance! Dance!"</string>
    <string name="darting_arrow">"Darting Arrow"</string>
    <string name="data_bank">"Data Bank"</string>
    <string name="day_one_of_my_new_life">"Day One of My New Life"</string>
    <string name="defense">"Defense"</string>
    <string name="echoes_of_the_coffin">"Echoes of the Coffin"</string>
    <string name="eyes_of_the_prey">"Eyes of the Prey"</string>
    <string name="fermata">"Fermata"</string>
    <string name="fine_fruit">"Fine Fruit"</string>
    <string name="geniuses_repose">"Geniuses' Repose"</string>
    <string name="good_night_and_sleep_well">"Good Night and Sleep Well"</string>
    <string name="hidden_shadow">"Hidden Shadow"</string>
    <string name="in_the_name_of_the_world">"In the Name of the World"</string>
    <string name="in_the_night">"In the Night"</string>
    <string name="incessant_rain">"Incessant Rain"</string>
    <string name="landaus_choice">"Landau's Choice"</string>
    <string name="loop">"Loop"</string>
    <string name="make_the_world_clamor">"Make the World Clamor"</string>
    <string name="mediation">"Mediation"</string>
    <string name="memories_of_the_past">"Memories of the Past"</string>
    <string name="meshing_cogs">"Meshing Cogs"</string>
    <string name="moment_of_victory">"Moment of Victory"</string>
    <string name="multiplication">"Multiplication"</string>
    <string name="mutual_demise">"Mutual Demise"</string>
    <string name="night_on_the_milky_way">"Night on the Milky Way"</string>
    <string name="nowhere_to_run">"Nowhere to Run"</string>
    <string name="on_the_fall_of_an_aeon">"On the Fall of an Aeon"</string>
    <string name="only_silence_remains">"Only Silence Remains"</string>
    <string name="passkey">"Passkey"</string>
    <string name="past_and_future">"Past and Future"</string>
    <string name="perfect_timing">"Perfect Timing"</string>
    <string name="pioneering">"Pioneering"</string>
    <string name="planetary_rendezvous">"Planetary Rendezvous"</string>
    <string name="post_op_conversation">"Post-Op Conversation"</string>
    <string name="quid_pro_quo">"Quid Pro Quo"</string>
    <string name="resolution_shines_as_pearls_of_sweat">"Resolution Shines As Pearls of Sweat"</string>
    <string name="return_to_darkness">"Return to Darkness"</string>
    <string name="river_flows_in_spring">"River Flows in Spring"</string>
    <string name="sagacity">"Sagacity"</string>
    <string name="shared_feeling">"Shared Feeling"</string>
    <string name="shattered_home">"Shattered Home"</string>
    <string name="sleep_like_the_dead">"Sleep Like the Dead"</string>
    <string name="something_irreplaceable">"Something Irreplaceable"</string>
    <string name="subscribe_for_more">"Subscribe for More!"</string>
    <string name="swordplay">"Swordplay"</string>
    <string name="texture_of_memories">"Texture of Memories"</string>
    <string name="the_birth_of_the_self">"The Birth of the Self"</string>
    <string name="the_moles_welcome_you">"The Moles Welcome You"</string>
    <string name="the_seriousness_of_breakfast">"The Seriousness of Breakfast"</string>
    <string name="this_is_me">"This Is Me!"</string>
    <string name="time_waits_for_no_one">"Time Waits for No One"</string>
    <string name="today_is_another_peaceful_day">"Today Is Another Peaceful Day"</string>
    <string name="trend_of_the_universal_market">"Trend of the Universal Market"</string>
    <string name="under_the_blue_sky">"Under the Blue Sky"</string>
    <string name="void_">"Void"</string>
    <string name="warmth_shortens_cold_nights">"Warmth Shortens Cold Nights"</string>
    <string name="we_are_wildfire">"We Are Wildfire"</string>
    <string name="we_will_meet_again">"We Will Meet Again"</string>
    <string name="woof_walk_time">"Woof! Walk Time!"</string>
    <string name="character_intro">Introducing</string>
    <string name="character_combat">Combat</string>
    <string name="character_eidolon">Eidolon</string>
    <string name="character_status_title">Status</string>
    <string name="character_skill_title">Skill</string>
    <string name="setting_language_title">Language</string>
    <string name="setting_daynight_title">DayNight Theme</string>
    <string name="setting_daynight_light">Light Theme</string>
    <string name="setting_daynight_dark">Dark Theme</string>
    <string name="setting_daynight_system">Follow System</string>
    <string name="setting_donate_title">Donate</string>
    <string name="setting_about_title">About</string>
    <string name="setting_credits_title">Credit By</string>
    <string name="setting_donation_thx_success">Thank you for your support!</string>
    <string name="setting_donation_thx_failed">"Here is the error message, you may send it to our Email : xectorda@gmail.com"</string>
    <string name="setting_donation_msg_success">Your payment has been successfully completed</string>
    <string name="setting_donation_msg_failed">"Oops... Something went wrong with your payment..."</string>
    <string name="home_characters">Characters</string>
    <string name="home_lightcones">Lightcones</string>
    <string name="home_relics">Relics</string>
    <string name="home_settings">Settings</string>
    <string name="home_search_bar_hint">Search...</string>
    <string name="n_a">N/A</string>
    <string name="element_fire">Fire</string>
    <string name="element_wind">Wind</string>
    <string name="element_ice">Ice</string>
    <string name="element_imaginary">Imaginary</string>
    <string name="element_lightning">Lightning</string>
    <string name="element_physical">Physical</string>
    <string name="element_quantum">Quantum</string>
    <string name="path_the_abundance">Abundance</string>
    <string name="path_the_destruction">Destruction</string>
    <string name="path_the_erudition">Erudition</string>
    <string name="path_the_harmony">Harmony</string>
    <string name="path_the_hunt">Hunt</string>
    <string name="path_the_nihility">Nihility</string>
    <string name="path_the_preservation">Preservation</string>
    <string name="rarity">Rarity</string>
    <string name="path">Path</string>
    <string name="element">Element</string>
    <string name="status">Status</string>
    <string name="released">Released</string>
    <string name="soon">Soon</string>
    <string name="beta">beta</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="status_hp">HP</string>
    <string name="status_atk">ATK</string>
    <string name="status_def">DEF</string>
    <string name="status_speed">SPD</string>
    <string name="status_taunt">TAUNT</string>
    <string name="cas_title">Character Advice Suggester</string>
    <string name="cas_exist_file">File Exist</string>
    <string name="cas_saved">Saved!</string>
    <string name="cas_max_size">Max of choices is : </string>
    <string name="cas_item_selected">You have selected this item</string>
    <string name="cas_name_reuired">Please enter your name!</string>
    <string name="cas_save_only">Save Only</string>
    <string name="dev_page_title">Developer Page</string>
    <string name="dev_btn_open">Press Me To Open</string>
    <string name="dev_warning">All function in this page were experimental, which can cause unexpected crashes and must not count in stable release version. Once you take further action, you agree these disclaims and already knew the affect it may cause.</string>
    <string name="theme_change_title">Theme</string>
    <string name="easter_egg">Easter Egg</string>
    <string name="bug_collect_data">We will collect : \n．Your Device\'s Model\n．Your Device\'s Android Version</string>
    <string name="bug_desc">Opus... It seems there have some issues... Could you please share the error log to us for fixing these bugs?</string>
    <string name="bug_title">Error Log</string>
    <string name="relic_2pc">2pc</string>
    <string name="relic_4pc">4pc</string>
    <string name="home_home">Home</string>
</resources>