<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Honkai Stargazer (崩壞•星穹觀星者) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home_icon"
        android:iconTint="@color/home_bar_icon"
        android:title="@string/home_home"></item>
    <item
        android:id="@+id/menu_characters"
        android:icon="@drawable/ic_character_icon"
        android:iconTint="@color/home_bar_icon"
        android:title="@string/home_characters"></item>
    <item
        android:id="@+id/menu_lightcones"
        android:icon="@drawable/ic_lightcone_icon"
        android:iconTint="@color/home_bar_icon"
        android:title="@string/home_lightcones"></item>
    <item
        android:id="@+id/menu_relics"
        android:icon="@drawable/ic_relic_icon"
        android:iconTint="@color/home_bar_icon"
        android:title="@string/home_relics"></item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/home_settings"></item>
</menu>