<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Honkai Stargazer (崩壞•星穹觀星者) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_characters"
        android:icon="@drawable/ic_person"
        android:title="@string/home_characters"></item>
    <item
        android:id="@+id/menu_lightcones"
        android:icon="@drawable/ic_tornado"
        android:title="@string/home_lightcones"></item>
    <item
        android:id="@+id/menu_relics"
        android:icon="@drawable/ic_health_and_safety"
        android:title="@string/home_relics"></item>
    <item
        android:id="@+id/menu_confirm"
        android:icon="@drawable/outline_check_circle_outline_24"
        android:title="@android:string/ok"></item>
</menu>