<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project Honkai Stargazer (崩壞•星穹觀星者) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView_dialog_daynight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/setting_daynight_title"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:requiresFadingEdge="horizontal|vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/setting_daynight_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/setting_daynight_light"
                    style="@style/Widget.Material3.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/setting_daynight_light" />

                <RadioButton
                    android:id="@+id/setting_daynight_dark"
                    style="@style/Widget.Material3.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_daynight_dark" />

                <RadioButton
                    android:id="@+id/setting_daynight_system"
                    style="@style/Widget.Material3.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_daynight_system" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@android:string/ok" />
</LinearLayout>