<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project Honkai Stargazer (崩壞•星穹觀星者) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_dialog_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="0"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/pom_pom_failed_issue" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center|left"
                android:text="@string/bug_title"
                android:textColor="@color/tv_daynight_tint"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/bug_desc"
            android:textColor="@color/tv_daynight_tint"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bg_spinner_expand">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/bug_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="org.json.JSONException: Value {} at 2 of type org.json.JSONObject cannot be converted to JSONArray"
                    android:textColor="@color/tv_nightday_tint" />

                <WebView
                    android:id="@+id/bug_webview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/bug_collect_data"
            android:textColor="@color/tv_daynight_tint"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bug_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#00000000"
                android:text="@string/cancel"
                android:textColor="@color/filter_btn_themed"
                app:strokeColor="@color/filter_btn_stroke"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/bug_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/bug_report_btn_report" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>