<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Honkai Stargazer (崩壞•星穹觀星者) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView_dev"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_page_bg"
    tools:context=".ui.DevPage">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/dev_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/round_arrow_back_24" />

        <TextView
            android:id="@+id/dev_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/dev_page_title"
            android:textColor="@color/home_list_item_title"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fadingEdgeLength="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/dev_warning"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/theme_change_title"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/setting_monet_engine"
                style="@style/Widget.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:switchPadding="8dp"
                android:text="Monet Engine"
                android:visibility="visible" />

            <Switch
                android:id="@+id/setting_shadow_list_item"
                style="@style/Widget.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/hsr_font"
                android:switchPadding="8dp"
                android:text="Shadow of List Item"
                android:visibility="gone" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/cas_title"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dev_char_advice_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_btn_open" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Make an Expection"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dev_expection_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_btn_open" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Museum Game"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dev_museum_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_btn_open" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/easter_egg"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/dev_siptik_rotate"
                style="@style/Widget.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:switchPadding="8dp"
                android:text="Rotate HSR Item"
                android:visibility="visible" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>