<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project Honkai Stargazer (崩壞•星穹觀星者) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/advice_relic_set_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/advice_relic_set_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/advice_relic_set_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/musketeer_of_wild_wheat_1" />

                <ImageView
                    android:id="@+id/advice_relic_set_icon2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/knight_of_purity_palace_1" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/advice_relic_set_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/musketeer_of_wild_wheat"
                    android:textColor="@color/tv_daynight_tint"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/advice_relic_set_name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/musketeer_of_wild_wheat"
                    android:textColor="@color/tv_daynight_tint"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/advice_relic_set_btn"
                app:srcCompat="@drawable/baseline_arrow_drop_down_24"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:background="@drawable/circle_spec_theme" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/advice_relic_set_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/advice_relic_set_2pc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relic_2pc"
                android:textColor="@color/theme_color_base"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/advice_relic_set_2pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="idk"
                android:textColor="@color/tv_daynight_tint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/advice_relic_set_4pc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relic_4pc"
                android:textColor="@color/theme_color_base"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/advice_relic_set_4pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="idk"
                android:textColor="@color/tv_daynight_tint"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>